[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flippers"
description = 'Flippers is a weak supervision library for creating high quality labels using your domain kownledge and weak supervision sources.'
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Liam Toran", email = "liam.toran@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "pandas"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/liamtoran/flippers#readme"
Issues = "https://github.com/liamtoran/flippers/issues"
Source = "https://github.com/liamtoran/flippers"

[tool.hatch.version]
path = "flippers/__about__.py"

# Coverage

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=flippers --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "flippers/__about__.py",
]

# Linting and ruff

[tool.hatch.envs.lint]
description = "Check and lint the codebase."
dependencies = [
  "pre-commit",
  "pre-commit-hooks",
  "docformatter",
  "isort",
  "black[jupyter]",
  "ruff",
]

[tool.hatch.envs.lint.scripts]
run = [
  "black .",
  "isort .",
  "docformatter .",
  "ruff .",
]


# mypy checks

[tool.hatch.envs.type]
description = "Type check the codebase."
dependencies = [
  "mypy",
  # Dependencies
  "types-appdirs", "importlib_metadata", "types-Pillow", "sixelcrop",
  "pandas-stubs",
  # Optional dependencies
  "rich", "black", "isort",
  # Non-dependencies
  "html2text", "sympy"
]

[tool.hatch.envs.type.scripts]
run = "mypy {args:--namespace-packages -p flippers}"

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.ruff]
line-length = 88
